--- a/server/views/content.ejs
+++ b/server/views/content.ejs
@@ -1,25 +1,19 @@
-<div class="login-form">
-  <form action="/login" method="post">
-    <div class="form-control">
-      <label for="name">Name</label>
-      <input
-        type="text"
-        name="name"
-        id="username"
-        placeholder="Enter your name"
-      />
-    </div>
-    <div class="form-control">
-      <label for="password">Password</label>
-      <input
-        type="password"
-        name="password"
-        id="password"
-        placeholder="Enter your password"
-      />
-    </div>
-    <div class="form-control">
-      <button type="submit" class="btn">Login</button>
-    </div>
-  </form>
-</div>
+        <button id="connectButton"> </button>
+        <p id="networkNameText"> </p>
+
+        <br>
+        <br>
+
+        <input id="priceInput" placeholder="Prezzo (integer)">
+        <button disabled id="addPaymentEntryButton"> Aggiungi entry di pagamento </button>
+
+        <br>
+        <br>
+
+        <input id="idInput" placeholder="ID (integer)">
+        <button disabled id="getPaymentEntryButton"> Trova entry di pagamento </button>
+
+        <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@metamask/onboarding@1.0.0/dist/metamask-onboarding.bundle.js"></script>
+
+        <script type="text/javascript" src="js/app.js"> </script>
