--- a/server/views/content.ejs
+++ b/server/views/content.ejs
@@ -4,16 +4,15 @@
         <br>
         <br>
 
-        <input id="priceInput" placeholder="Prezzo (integer)">
-        <button disabled id="addPaymentEntryButton"> Aggiungi entry di pagamento </button>
-
-        <br>
-        <br>
-
-        <input id="idInput" placeholder="ID (integer)">
-        <button disabled id="getPaymentEntryButton"> Trova entry di pagamento </button>
+        <input id="idInput" placeholder="ID di pagamento (INT)">
+        <button disabled id="settlePaymentButton"> Paga </button>
 
         <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/@metamask/onboarding@1.0.0/dist/metamask-onboarding.bundle.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@metamask/onboarding@1.0.1/dist/metamask-onboarding.bundle.js"></script>
 
         <script type="text/javascript" src="js/app.js"> </script>
+
+        <br>
+        <br>
+
+	<a href="transazioni">Vedi transazioni DB</a>
