--- a/server/views/contentPoC.ejs
+++ b/server/views/contentPoC.ejs
@@ -14,5 +14,28 @@
 
         <br>
         <br>
+        <br>
+        <br>
 
-	<a href="transazioni">Vedi transazioni DB <%=name%></a>
+	<h1> Inserisci transazione </h1>
+	<form method="post">
+		id: <input type="text" name="id"><br>
+		ecommerce: <input type="text" name="ecommerce"><br>
+		idProdotto: <input type="text" name="idProdotto"><br>
+		<input type="submit" value="Inserisci" name="add">
+	</form>
+
+	<br>
+        <br>
+
+	<h1> Rimuovi transazione </h1>
+	<form method="post">
+		id: <input type="text" name="id"><br>
+		<input type="submit" value="Inserisci" name="del">
+	</form>
+
+	<br>
+        <br>
+
+	<h1> Lista transazioni </h1>
+	<%-transazioni%>
