--- a/server/views/transazioni.ejs
+++ b/server/views/transazioni.ejs
@@ -1,5 +1,6 @@
 <%- include('header.ejs') %>
 
-	<img src="<%=qr_img%>"/>
+	<h1> Lista transazioni </h1>
+	<%-item%>
 
 <%- include('footer.ejs') %>
