--- a/server/views/transazione.ejs
+++ b/server/views/transazione.ejs
@@ -15,7 +15,7 @@
 
         <script type="text/javascript" src="../js/app.js"> </script>
 
-	<b> Aquirente: </b><%=acquirente%><br>
+	<b> Acquirente: </b><%=acquirente%><br>
 	<b> Id oggetto: </b><%=paymentEntryId%><br>
 	<b> Stato: </b><%=status%><br>
 
