--- a/server/views/transazione.ejs
+++ b/server/views/transazione.ejs
@@ -1,19 +1,19 @@
 <%- include('header.ejs') %>
 
-        <button id="connectButton"> </button>
+	<button id="connectButton"> </button>
         <p id="networkNameText"> </p>
 
         <br>
 
-        <button disabled id="confirmQRButton"> Conferma <span id="idPagamento"><%=idTransazione%></span> </button>
-
-	<br>
-	<br>
+	<input id="idPag" type="hidden" value="<%=idTransazione%>">
+        <button disabled id="unlockFundsButton"> Sblocca fondi </button>
 
         <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/@metamask/onboarding@1.0.1/dist/metamask-onboarding.bundle.js"></script>
 
-        <script type="text/javascript" src="../js/app.js"> </script>
+        <script type="text/javascript" src="js/app.js"> </script>
+	<br>
+	<br>
 
 	<b> Acquirente: </b><%=acquirente%><br>
 	<b> Id oggetto: </b><%=paymentEntryId%><br>
