--- a/server/views/transazione.ejs
+++ b/server/views/transazione.ejs
@@ -10,7 +10,7 @@
 
         <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/@metamask/onboarding@1.0.1/dist/metamask-onboarding.bundle.js"></script>
-
+	<input id="serverURL" type="hidden" value="<%=serverURL%>">
         <script type="text/javascript" src="js/app.js"> </script>
 	<br>
 	<br>
