--- a/server/views/header.ejs
+++ b/server/views/header.ejs
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index page</title>
-    <link rel="stylesheet" href="/css/styles.css" />
-  </head>
-  <body>
+<head>
+  <meta charset="utf-8">
+  <title>Shop Chain</title>
+  <meta name="author" content="Winning Software Solution">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="css/style.css"/>
+  <link rel="stylesheet" type="text/css" media ="screen and (max-width:600px), only screen and (max-width:600px)" href="css/mini.css"/>
+</head>
+
+<body>
+  <a class="nascosto" href="#primoContenuto">Go to content</a>
+  <header>
+    <div id="headerContainer">
+      <div id="logo">
+        <h1>Shop Chain</h1>
+      </div>
+    </div>
+  </header>
+  <div class="carosello" id="primoContenuto">
