--- a/server/views/main.ejs
+++ b/server/views/main.ejs
@@ -1,10 +1,11 @@
 <%- include('header.ejs') %>
+<div class="card">
+    <div id="status">
+        <p id="networkNameText"> </p>
+        <button id="connectButton">Connect</button>
+    </div>
 
-<div>
-    <p id="networkNameText"> </p>
-    <button id="connectButton"> </button>
 </div>
-
 <a id="listBuyer" class="rimosso">Mostra i miei acquisti</a>
 <a id="listSeller" class="rimosso">Mostra le mie vendite</a>
 
