--- a/server/public/css/style.css
+++ b/server/public/css/style.css
@@ -5,7 +5,13 @@
 }
 
 html {
+  scroll-behavior: smooth;
   font-size: 62.5%;
+}
+
+html body{
+  margin: auto;
+  max-width: 1024px;
 }
 
 body {
@@ -84,7 +90,6 @@ table, th, td {
   font-weight: bold;
 }
 
-
 .date {
   display: block;
   font-size: 0.8em;
@@ -127,5 +132,71 @@ table, th, td {
   color: #ddd;
 }
 
+#connect {
+  display: none;
+  position: fixed;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  background-color: #000000d0;
+}
 
+#connect>div {
+  width: 40em;
+  height: 24em;
+  background-color: white;
+  text-align: center;
+  position: relative;
+  max-width: 30em;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
+  padding: .5rem;
+}
 
+#connect>div>h1 {
+  margin-top: 1.2em;
+  margin-bottom: 0.9em;
+}
+
+#connect>div>img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 9em;
+  height: auto;
+}
+
+#connect>div>button, .info>button {
+  cursor: pointer;
+  border-style: solid;
+  border-color: #333;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
+  font-weight: bold;
+  color: white;
+  background-color: #333;
+  padding: 1em;
+  position: relative;
+  width: 25em;
+  top: 4em;
+}
+
+.info>button {
+  top: 0em;
+  margin-bottom: 2em;
+}
+
+.info>button:hover, #connect>div>button:hover {
+  color: #333;
+  background-color: white;
+  border-style: solid;
+  border-color: #333;
+}
+
+.extraspace {
+  margin-bottom: 7em;
+}
