--- a/server/views/confirm.ejs
+++ b/server/views/confirm.ejs
@@ -1,23 +1,17 @@
 <%- include('header.ejs') %>
+<%- include('login-header.ejs') %>
 
-<button id="connectButton"> </button>
-<p id="networkNameText"> </p>
+<div class="info">
+    <strong class="price">Price <%-price%> Matic</strong>
+    <span class="addr">From: <%-buyer%></span>
+    <span class="addr">To: <%-seller%></span>
+    <span class="date">Opened <%-created%></span>
+    <span class="date">Closed <%-confirmed%></span>
+    <span class="status"><%-status%></span>
+    
+    <input id="idPag" type="hidden" value="<%=id%>">
+    <button id="unlockFundsButton">Confirm</button>
+</div>
 
-<br>
-
-<input id="idPag" type="hidden" value="<%=id%>">
-<button disabled id="unlockFundsButton"> Sblocca fondi </button>
-
-<script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@metamask/onboarding@1.0.1/dist/metamask-onboarding.bundle.js"></script>
-<input id="serverURL" type="hidden" value="<%=serverURL%>">
-<script type="text/javascript" src="js/app.js"> </script>
-<br>
-<br>
-
-<b> Aquirente: </b><%=buyer%><br>
-<b> Venditore: </b><%=seller%><br>
-<b> Prezzo: </b><%=price%><br>
-<b> Stato: </b><%=status%><br>
-
+<%- include('login-footer.ejs') %>
 <%- include('footer.ejs') %>
