--- a/server/views/land.ejs
+++ b/server/views/land.ejs
@@ -1,23 +1,13 @@
 <%- include('header.ejs') %>
+<%- include('login-header.ejs') %>
 
-<button id="connectButton"> </button>
-<p id="networkNameText"> </p>
+<div class="info">
+    <strong class="price">Price <%-price%> Matic</strong>
+    <span class="addr extraspace">Seller: <%-seller%></span>
+    
+    <input id="idPag" type="hidden" value="<%=id%>">
+    <button id="settlePaymentButton">Paga</button>
+</div>
 
-<br>
-
-<b> Venditore: </b><%=seller%><br>
-<b> Prezzo: </b><%=price%><br>
-<br>
-
-<input id="idInput" type="hidden" value="<%=id%>"">
-<button disabled id="settlePaymentButton"> Paga </button>
-
-<script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@metamask/onboarding@1.0.1/dist/metamask-onboarding.bundle.js"></script>
-<input id="serverURL" type="hidden" value="<%=serverURL%>">
-<script type="text/javascript" src="js/app.js"> </script>
-<br>
-<br>
-
-
+<%- include('login-footer.ejs') %>
 <%- include('footer.ejs') %>
