--- a/server/views/main.ejs
+++ b/server/views/main.ejs
@@ -1,19 +1,8 @@
 <%- include('header.ejs') %>
-<div class="card">
-    <div id="status">
-        <p id="networkNameText"> </p>
-        <button id="connectButton">Connect</button>
-    </div>
+<%- include('login-header.ejs') %>
 
-</div>
-<a id="listBuyer" class="rimosso">Mostra i miei acquisti</a>
-<a id="listSeller" class="rimosso">Mostra le mie vendite</a>
+<a id="listBuyer" class="rimosso" href="#">Mostra i miei acquisti</a>
+<a id="listSeller" class="rimosso" href="#">Mostra le mie vendite</a>
 
-
-<script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@metamask/onboarding@1.0.1/dist/metamask-onboarding.bundle.js"></script>
-
-<input id="serverURL" type="hidden" value="<%=serverURL%>">
-<script type="text/javascript" src="js/app.js"> </script>
-
+<%- include('login-footer.ejs') %>
 <%- include('footer.ejs') %>
