--- a/server/views/footer.ejs
+++ b/server/views/footer.ejs
@@ -1,3 +1,7 @@
 </div>
+<footer>
+    Realizzato da <strong>Winning Software Solution</strong>
+    <a href="mailto:winningsoftwaresolution@gmail.com">winningsoftwaresolution@gmail.com</a>
+</footer>
 </body>
 </html>
