--- a/server/views/header.ejs
+++ b/server/views/header.ejs
@@ -10,12 +10,8 @@
 </head>
 
 <body>
-  <a class="nascosto" href="#primoContenuto">Go to content</a>
+  <a class="nascosto" href="#con">Go to content</a>
   <header>
-    <div id="headerContainer">
-      <div id="logo">
         <h1>Shop Chain</h1>
-      </div>
-    </div>
   </header>
-  <div class="carosello" id="primoContenuto">
+  <div id="con">
