--- a/server/public/css/style.css
+++ b/server/public/css/style.css
@@ -7,11 +7,15 @@
 html {
   scroll-behavior: smooth;
   font-size: 62.5%;
+  background-color: #888;
 }
 
 html body{
+  padding: 0;
   margin: auto;
   max-width: 1024px;
+  position: relative;
+  min-height: 100vh;
 }
 
 body {
@@ -57,6 +61,10 @@ table, th, td {
 }
 
 .info {
+  margin: auto;
+  margin-top: 3em;
+  background-color: #555;
+  color: white;
   text-align: center;
   position: relative;
   max-width: 30em;
@@ -199,4 +207,36 @@ table, th, td {
 
 .extraspace {
   margin-bottom: 7em;
+}
+
+header {
+  text-align: center;
+  font-size: 1.4em;
+  padding: 1.2em;
+  border-radius: 0 0 30px 30px;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
+  background-color: #333;
+  color: white;
+}
+
+footer {
+  text-align: center;
+  padding: 1.2em;
+  border-radius: 30px 30px 0px 0px;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
+  background-color: #333;
+  color: white;
+  height: 5em;
+}
+
+footer strong {
+  font-size: 1.1em;
+  font-weight: bold;
+}
+
+footer a {
+  padding-top: 0.8em;
+  display: block;
+  font-size: 0.9em;
+  color: white;
 }
