--- a/server/views/header.ejs
+++ b/server/views/header.ejs
@@ -10,8 +10,16 @@
 </head>
 
 <body>
-  <a class="nascosto" href="#con">Go to content</a>
   <header>
-        <h1>Shop Chain</h1>
+    <h1>Shop Chain</h1>
   </header>
+  <div id="connect">
+    <div>
+      <h1>Connect with MetaMask</h1>
+      <img src="img/meta.png" witdh="1200" height="1200" />
+      <button id="connectButton">Connect</button>
+    </div>
+    <input id="serverURL" type="hidden" value="<%=serverURL%>" />
+  </div>
   <div id="con">
+    
