--- a/server/views/main.ejs
+++ b/server/views/main.ejs
@@ -1,8 +1,6 @@
 <%- include('header.ejs') %>
-<%- include('login-header.ejs') %>
 
-<a id="listBuyer" class="rimosso" href="#">Mostra i miei acquisti</a>
-<a id="listSeller" class="rimosso" href="#">Mostra le mie vendite</a>
+<a id="listBuyer" href="buyer">Mostra i miei acquisti</a>
+<a id="listSeller" href="seller">Mostra le mie vendite</a>
 
-<%- include('login-footer.ejs') %>
 <%- include('footer.ejs') %>
