--- a/server/views/footer.ejs
+++ b/server/views/footer.ejs
@@ -1,7 +1,7 @@
+<script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@metamask/onboarding@1.0.1/dist/metamask-onboarding.bundle.js"></script>
+<script type="text/javascript" src="js/app.js"> </script>
+
 </div>
-<footer>
-    Realizzato da <strong>Winning Software Solution</strong>
-    <a href="mailto:winningsoftwaresolution@gmail.com">winningsoftwaresolution@gmail.com</a>
-</footer>
 </body>
 </html>
