--- a/server/views/land.ejs
+++ b/server/views/land.ejs
@@ -1,7 +1,7 @@
 <%- include('header.ejs') %>
 
 <div class="info">
-    <strong class="price">Price <%-price%> Matic</strong>
+    <strong class="price">Price <%-price%>$</strong>
     <span class="addr extraspace">Seller: <%-seller%></span>
     
     <input id="idPag" type="hidden" value="<%=id%>">
