--- a/server/views/detail.ejs
+++ b/server/views/detail.ejs
@@ -1,7 +1,7 @@
 <%- include('header.ejs') %>
 
 <div class="info">
-    <strong class="price">Price <%-price%> Matic</strong>
+    <strong class="price">Price <%-price%>$</strong>
     <span class="addr">From: <%-buyer%></span>
     <span class="addr">To: <%-seller%></span>
     <span class="date">Opened <%-created%></span>
