--- a/server/public/css/style.css
+++ b/server/public/css/style.css
@@ -143,7 +143,7 @@ table, th, td {
   display: none;
 }
 
-#connect {
+.pop {
   z-index: 999;
   display: none;
   position: fixed;
@@ -157,7 +157,29 @@ table, th, td {
   background-color: #000000d0;
 }
 
-#connect>div {
+.pop>div>p {
+  margin-top: 2.5em;
+  font-size: 1.2em;
+}
+
+#confirm img, #success img, #sending img, #error img {
+  margin-top: -1.7em;
+  margin-bottom: -2.2em;
+  height: 40%;
+  width: auto;
+  
+}
+
+#sending img {
+  margin-top: 1.2em;
+  margin-bottom: -0.5em;
+}
+
+#confirm button, #success button, #sending button, #error button {
+  top: 3.5em;
+}
+
+.pop>div {
   width: 40em;
   height: 24em;
   background-color: white;
@@ -169,12 +191,12 @@ table, th, td {
   padding: .5rem;
 }
 
-#connect>div>h1 {
+.pop>div>h1 {
   margin-top: 1.2em;
   margin-bottom: 0.9em;
 }
 
-#connect>div>img {
+.pop>div>img {
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -182,7 +204,7 @@ table, th, td {
   height: auto;
 }
 
-#connect>div>button, .info>button {
+.pop>div>button, .info>button {
   cursor: pointer;
   border-style: solid;
   border-color: #333;
