--- a/server/views/main.ejs
+++ b/server/views/main.ejs
@@ -2,5 +2,6 @@
 
 <a id="listBuyer" href="buyer">Mostra i miei acquisti</a>
 <a id="listSeller" href="seller">Mostra le mie vendite</a>
+<a href="help">Mostra il manuale</a>
 
 <%- include('footer.ejs') %>
