--- a/server/views/header.ejs
+++ b/server/views/header.ejs
@@ -49,6 +49,15 @@
     </div>
   </div>
 
+  <div id="wrongChain" class="pop">
+    <div>
+      <h1>Wrong chain</h1>
+      <img src="img/error.png" witdh="260" height="256" />
+      <p>Please select Mumbai test network from MetaMask</p>
+      <button onclick="location.reload()">Retry</button>
+    </div>
+  </div>
+
   <div id="sending" class="pop">
     <div>
       <h1>Awaiting receipt</h1>
