--- a/server/views/footer.ejs
+++ b/server/views/footer.ejs
@@ -3,5 +3,9 @@
 <script type="text/javascript" src="js/app.js"> </script>
 
 </div>
+
+<footer>
+    <a href="winningsoftwaresolution@gmail.com">winningsoftwaresolution@gmail.com</a>
+</footer>
 </body>
 </html>
