--- a/server/views/main.ejs
+++ b/server/views/main.ejs
@@ -1,7 +1,9 @@
 <%- include('header.ejs') %>
 
-<a id="listBuyer" href="buyer">Mostra i miei acquisti</a>
-<a id="listSeller" href="seller">Mostra le mie vendite</a>
-<a href="help">Mostra il manuale</a>
+<div class="info" id="main">
+<h2>Welcome to Shop&nbsp;Chain</h2>
+<p>Our service allow your ecommerce to play safely using latest <strong>Blockchain</strong> and <strong>Smart contract</strong> tecnology.</p>
+<p>Using <strong>Polygon</strong> a fast and reliable network.</p>
+</div>
 
 <%- include('footer.ejs') %>
