--- a/server/public/css/style.css
+++ b/server/public/css/style.css
@@ -6,21 +6,25 @@
 
 html {
   scroll-behavior: smooth;
-  font-size: 62.5%;
+  height: 100%;
 }
 
-html body{
-  padding: 0;
+html body {
+  font-family: 'Helvetica Neue', 'Arial', sans-serif;
   margin: auto;
-  max-width: 1024px;
-  position: relative;
-  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  font-size: 1.2rem;
+  background-color: #f5f7fd;
 }
 
-body {
-  font-family: "Lato", "Helvetica", Helvetica, sans-serif;
-  font-size: 1.8rem;
-  padding: 1.2rem;
+#main h2 {
+  margin: 1em;
+}
+
+#main p {
+  margin: 2em;
 }
 
 .nascosto {
@@ -32,6 +36,7 @@ body {
 }
 
 .transactions {
+  margin-top: 2em;
   display: flex;
   flex-wrap: wrap;
   list-style-type: none;
@@ -42,12 +47,30 @@ body {
 .transactions li {
   text-align: center;
   position: relative;
-  max-width: 15em;
+  width: 15em;
+  height: 10em;
   flex: 1;
+  color: black;
+  background-color: white;
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
   padding: .5rem;
+  background-repeat: no-repeat;
+  background-size: 2.9em;
 }
+
+.transactions li.stato1 {
+  background-image: url("../img/yellow.png");
+}
+
+.transactions li.stato2 {
+  background-image: url("../img/green.png");
+}
+
+.transactions li.stato3 {
+  background-image: url("../img/red.png");
+}
+
 
 .transactions a {
   text-decoration: none;
@@ -57,8 +80,7 @@ body {
 .info {
   margin: auto;
   margin-top: 3em;
-  background-color: #555;
-  color: white;
+  background-color: white;
   text-align: center;
   position: relative;
   max-width: 30em;
@@ -97,36 +119,6 @@ body {
   display: block;
   font-size: 1em;
   margin: 1.5em;
-}
-
-.transactions li.stato1 {
-  background-color: yellow;
-}
-.transactions li.stato1 .price {
-  color: black;
-}
-.transactions li.stato1 .date {
-  color: #333;
-}
-
-.transactions li.stato2 {
-  background-color: darkgreen;
-}
-.transactions li.stato2 .price {
-  color: white;
-}
-.transactions li.stato2 .date {
-  color: #ddd;
-}
-
-.transactions li.stato3 {
-  background-color: darkred;
-}
-.transactions li.stato3 .price {
-  color: white;
-}
-.transactions li.stato3 .date {
-  color: #ddd;
 }
 
 #con {
@@ -203,12 +195,12 @@ body {
 .pop>div>button, .info>button, #qr {
   cursor: pointer;
   border-style: solid;
-  border-color: #333;
+  border-color: #0c162c;
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
   font-weight: bold;
   color: white;
-  background-color: #333;
+  background-color: #0c162c;
   padding: 1em;
   min-width: 12em;
   margin-top: 4em;
@@ -226,23 +218,53 @@ body {
   font-weight: bold;
 }
 
-.info>button:hover, #connect>div>button:hover, #qr:hover {
-  color: #333;
-  background-color: white;
-  border-style: solid;
-  border-color: #333;
-}
-
 .extraspace {
   margin-bottom: 7em;
 }
 
 header {
-  text-align: center;
-  font-size: 1.4em;
-  padding: 1.2em;
-  border-radius: 0 0 30px 30px;
-  box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
-  background-color: #333;
+  flex-shrink: 0;
+  overflow: hidden;
+  background-color: #0c162c;
+  padding: 1em;
+}
+
+#hamb {
+  display: none;
+}
+
+header a {
+  float: left;
   color: white;
+  text-align: center;
+  padding: 0.5em;
+  text-decoration: none;
+  font-size: 1.2em; 
+  border-radius: 10px;
+}
+
+header a.logo {
+  font-size: 1.5em;
+  font-weight: bold;
+}
+
+#header-right {
+  float: right;
+}
+
+.notfooter {
+  flex: 1 0 auto;
+}
+
+footer a {
+  text-decoration: none;
+  color: white;
+}
+
+footer {
+  flex-shrink: 0;
+  text-align: center;
+  overflow: hidden;
+  background-color: #0c162c;
+  padding: 1em;
 }
