--- a/server/views/header.ejs
+++ b/server/views/header.ejs
@@ -71,6 +71,6 @@
       <p>Hold on, this might take a bit...</p>
     </div>
   </div>
-  
-  <div id="con" class="notfooter">
-    
+  <div class="notfooter">
+    <div id="con">
+      
