--- a/server/views/footer.ejs
+++ b/server/views/footer.ejs
@@ -3,7 +3,7 @@
 <script type="text/javascript" src="js/app.js"> </script>
 
 </div>
-
+</div>
 <footer>
     <a href="winningsoftwaresolution@gmail.com">winningsoftwaresolution@gmail.com</a>
 </footer>
