--- a/server/views/header.ejs
+++ b/server/views/header.ejs
@@ -15,7 +15,7 @@
     <button id="hamb" onclick="toggleMenu()">Menù</button>
     <div id="header-right">
       <a id="listBuyer" href="buyer">Incoming</a>
-      <a id="listSeller" href="seller">Outcoming</a>
+      <a id="listSeller" href="seller">Outgoing</a>
       <a href="help">Help</a>
     </div>
   </header>
