--- a/server/views/land.ejs
+++ b/server/views/land.ejs
@@ -5,7 +5,7 @@
     <span class="addr extraspace">Seller: <%-seller%></span>
     
     <input id="idPag" type="hidden" value="<%=id%>">
-    <button id="settlePaymentButton">Paga</button>
+    <button id="settlePaymentButton">Confirm</button>
 </div>
 
 <%- include('footer.ejs') %>
