--- a/server/views/confirm.ejs
+++ b/server/views/confirm.ejs
@@ -6,7 +6,7 @@
     <span class="addr">To: <%-seller%></span>
     <span class="date">Opened <%-created%></span>
     <span class="date">Closed <%-confirmed%></span>
-    <span class="status"><%-status%></span>
+    <span class="status" id="status"><%-status%></span>
     
     <input id="idPag" type="hidden" value="<%=id%>">
     <button id="unlockFundsButton">Confirm</button>
