--- a/server/views/header.ejs
+++ b/server/views/header.ejs
@@ -14,8 +14,8 @@
     <a href="/" class="logo">Shop&nbsp;Chain</a>
     <button id="hamb" onclick="toggleMenu()">Menù</button>
     <div id="header-right">
-      <a id="listBuyer" href="buyer">Incoming</a>
-      <a id="listSeller" href="seller">Outgoing</a>
+      <a id="listSeller" href="seller">Incoming</a>
+      <a id="listBuyer" href="buyer">Outgoing</a>
       <a href="help">Help</a>
     </div>
   </header>
