--- a/server/views/confirm.ejs
+++ b/server/views/confirm.ejs
@@ -5,7 +5,7 @@
     <span class="addr">From: <%-buyer%></span>
     <span class="addr">To: <%-seller%></span>
     <span class="date">Opened <%-created%></span>
-    <span class="date">Closed <%-confirmed%></span>
+    <%-confirmed%>
     <span class="status" id="status"><%-status%></span>
     
     <input id="idPag" type="hidden" value="<%=id%>">
