--- a/server/views/header.ejs
+++ b/server/views/header.ejs
@@ -59,7 +59,7 @@
     <div>
       <h1>Wrong chain</h1>
       <img src="img/error.png" witdh="260" height="256" />
-      <p>Please select Mumbai test network from MetaMask</p>
+      <p>Please select <span id="chainName"></span> from MetaMask</p>
       <button onclick="location.reload()">Retry</button>
     </div>
   </div>
