--- a/server/views/header.ejs
+++ b/server/views/header.ejs
@@ -23,7 +23,7 @@
     <div>
       <h1>Connect with MetaMask</h1>
       <img src="img/meta.png" witdh="1200" height="1200" />
-      <button id="connectButton">Connect</button>
+      <button id="connectButton" onclick="onClickConnect()">Connect with MetaMask</button>
     </div>
     <input id="serverURL" type="hidden" value="<%=serverURL%>" />
   </div>
