--- a/server/views/confirm.ejs
+++ b/server/views/confirm.ejs
@@ -9,7 +9,7 @@
     <span class="status" id="status"><%-status%></span>
     
     <input id="idPag" type="hidden" value="<%=id%>">
-    <button id="unlockFundsButton">Confirm</button>
+    <button id="unlockFundsButton" onclick="onClickUnlockFunds()">Confirm</button>
 </div>
 
 <%- include('footer.ejs') %>
