--- a/server/views/detail.ejs
+++ b/server/views/detail.ejs
@@ -15,7 +15,7 @@
     <div class="status" id="status"><%-status%></div>
     <%-qr%>
     <input id="idPag" type="hidden" value="<%=id%>">
-    <a id="cancelPaymentButton">Cancel transaction</a>
+    <a id="cancelPaymentButton" onclick="onCancelPayment()">Cancel transaction</a>
 </div>
 
 <%- include('footer.ejs') %>
