--- a/server/views/header.ejs
+++ b/server/views/header.ejs
@@ -22,7 +22,7 @@
   <div id="connect" class="pop">
     <div>
       <h1>Connect with MetaMask</h1>
-      <img src="img/meta.png" witdh="1200" height="1200" />
+      <img src="img/meta.png" width="1200" height="1200" />
       <button id="connectButton" onclick="onClickConnect()">Connect with MetaMask</button>
     </div>
     <input id="serverURL" type="hidden" value="<%=serverURL%>" />
@@ -31,7 +31,7 @@
   <div id="confirm" class="pop">
     <div>
       <h1>Awaiting confirmation</h1>
-      <img src="img/meta.png" witdh="260" height="256" />
+      <img src="img/meta.png" width="260" height="256" />
       <p>Please confirm the transaction in MetaMask</p>
       <button onclick="closePop(event)">Cancel</button>
     </div>
@@ -40,7 +40,7 @@
   <div id="success" class="pop">
     <div>
       <h1>Transaction completed</h1>
-      <img src="img/success.png" witdh="260" height="256" />
+      <img src="img/success.png" width="260" height="256" />
       <p>The transaction was successfully sent</p>
       <button onclick="closePop(event)" id="relocButton">Done</button>
     </div>
@@ -49,7 +49,7 @@
   <div id="error" class="pop">
     <div>
       <h1>Transaction failed</h1>
-      <img src="img/error.png" witdh="260" height="256" />
+      <img src="img/error.png" width="260" height="256" />
       <p>An error occurred processing the transaction</p>
       <button onclick="closePop(event)">Close</button>
     </div>
@@ -58,7 +58,7 @@
   <div id="wrongChain" class="pop">
     <div>
       <h1>Wrong chain</h1>
-      <img src="img/error.png" witdh="260" height="256" />
+      <img src="img/error.png" width="260" height="256" />
       <p>Please select <span id="chainName"></span> from MetaMask</p>
       <button onclick="location.reload()">Retry</button>
     </div>
@@ -67,7 +67,7 @@
   <div id="sending" class="pop">
     <div>
       <h1>Awaiting receipt</h1>
-      <img src="img/wait.gif" witdh="200" height="200" />
+      <img src="img/wait.gif" width="200" height="200" />
       <p>Hold on, this might take a bit...</p>
     </div>
   </div>
