--- a/server/views/main.ejs
+++ b/server/views/main.ejs
@@ -2,7 +2,7 @@
 
 <div class="info" id="main">
 <h2>Welcome to Shop&nbsp;Chain</h2>
-<p>Our service allow your ecommerce to play safely using latest <strong>Blockchain</strong> and <strong>Smart contract</strong> tecnology.</p>
+<p>Our service allow your e-commerce to play safely using latest <strong>Blockchain</strong> and <strong>Smart contract</strong> technology.</p>
 <p>Using <strong>Polygon</strong> a fast and reliable network.</p>
 </div>
 
