Aggiunto hamb icon, footer, spostato right menu webapp
Tolto posizionamento menu dx hamburger

Bug fixed css webapp

Aggiunto hamb icon, footer, spostato right menu webapp

--- a/server/views/footer.ejs
+++ b/server/views/footer.ejs
@@ -5,7 +5,15 @@
 </div>
 </div>
 <footer>
-    <a href="winningsoftwaresolution@gmail.com">winningsoftwaresolution@gmail.com</a>
+    <div class="grid-container">
+        <div class="grid-item">
+            <p>Contact Us</p>
+            <ul class="items">
+                <li><a href="https://www.synclab.it/" target="_blank">Synclab</a></li>
+                <li><a href="mailto:winningsoftwaresolution@gmail.com">winningsoftwaresolution@gmail.com</a></li>
+            </ul>
+        </div>
+    </div>
 </footer>
 </body>
 </html>
