--- a/server/public/css/mini.css
+++ b/server/public/css/mini.css
@@ -1,18 +1,19 @@
 header a {
     float: none;
-    text-align: left;
+    text-align: right;
 }
 
 #hamb {
     display: block;
-    margin-right: 1em;
-    float: right;
+    margin-right: 0.3em;
+    right: 0px;
     width: 2.8em;
     height: 2.5em;
     font-weight: bold;
     color: white;
     background-color: #0c162c;
     border-style: none;
+    float: right;
 }
 
 #header-right a {
@@ -21,6 +22,31 @@ header a {
 
 #header-right {
     display: none;
-    margin-top: 1em;
-    float: none;
+    margin-top: 0.7em;
+    clear: both;
+}
+
+.containerHamb {
+display: inline-block;
+cursor: pointer;
+}
+
+.bar1, .bar2, .bar3 {
+    width: 35px;
+    height: 5px;
+    background-color: #FFFFFF;
+    margin: 6px 0;
+    transition: 0.4s;
+}
+
+.change .bar1 {
+    -webkit-transform: rotate(-45deg) translate(-9px, 6px);
+    transform: rotate(-45deg) translate(-9px, 6px);
+}
+
+.change .bar2 {opacity: 0;}
+
+.change .bar3 {
+    -webkit-transform: rotate(45deg) translate(-8px, -8px);
+    transform: rotate(45deg) translate(-8px, -8px);
 }
