--- a/server/public/css/style.css
+++ b/server/public/css/style.css
@@ -260,10 +260,14 @@ header a {
 header a.logo {
   font-size: 1.5em;
   font-weight: bold;
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
 #header-right {
   float: right;
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
 .notfooter {
@@ -275,10 +279,42 @@ footer a {
   color: white;
 }
 
+footer a:hover{
+  text-decoration: underline;
+}
+
 footer {
-  flex-shrink: 0;
-  text-align: center;
-  overflow: hidden;
   background-color: #0c162c;
-  padding: 1em;
+  padding: 0em;
+  color: white;
+  font-size: 14px;
+}
+
+footer .grid-container{
+  display: grid;
+  grid-auto-columns: 1fr;
+  grid-auto-flow: column;
+  padding: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  margin-top: 1em;
+}
+
+footer .grid-item{
+  font-weight: 700;
+}
+
+footer .items{
+  font-weight: normal;
+  padding: 5px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+footer .items li{
+  padding: 5px;
+}
+
+ul {
+  list-style-type: none;
 }
