--- a/server/views/buyer.ejs
+++ b/server/views/buyer.ejs
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Outgoing | Shop Chain</title>
+
 <%- include('header.ejs') %>
 
 <input id="idWallet" type="hidden" value="<%=id%>">
