--- a/server/views/help.ejs
+++ b/server/views/help.ejs
@@ -1,5 +1,16 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Help | Shop Chain</title>
+  
 <%- include('header.ejs') %>
 
-Nothing to see here
+<div class="info" id="main">
+<h2>Need help?</h2>
+<p>Checkout our latest manual...</p>
+<p>Are you a <strong>buyer</strong>? <a target="_blank" href="manual/manuale_acquirente_v0.1.pdf">Manual v0.1 (PDF)</a></p>
+<p>Are you an <strong>e-commerce?</strong> <a target="_blank" href="manual/manuale_e-commerce_v0.1.pdf">Manual v0.1 (PDF)</a></p>
+</div>
 
 <%- include('footer.ejs') %>
