--- a/server/views/land.ejs
+++ b/server/views/land.ejs
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Landing page | Shop Chain</title>
+  
 <%- include('header.ejs') %>
 
 <div class="info">
