--- a/server/views/main.ejs
+++ b/server/views/main.ejs
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Shop Chain</title>
+
 <%- include('header.ejs') %>
 
 <div class="info" id="main">
