--- a/server/views/header.ejs
+++ b/server/views/header.ejs
@@ -16,7 +16,7 @@
 <body>
   <header>
     <a href="/" class="logo">Shop&nbsp;Chain</a>
-    <button id="hamb" onclick="toggleMenu()">Menù</button>
+    <button id="hamb" onclick="toggleMenu()" aria-haspopup="true">Menù</button>
     <div id="header-right">
       <a id="listSeller" href="seller">Incoming</a>
       <a id="listBuyer" href="buyer">Outgoing</a>
