--- a/server/public/css/mini.css
+++ b/server/public/css/mini.css
@@ -1,7 +1,4 @@
-header a {
-    float: none;
-    text-align: right;
-}
+
 
 #hamb {
     display: block;
@@ -17,11 +14,13 @@ header a {
 
 #header-right a {
     display: block;
+    float: none;
+    text-align: right;
 }
 
 #header-right {
     display: none;
-    margin-top: 0.7em;
+    margin-top: 0em;
     clear: both;
 }
 
@@ -31,21 +30,21 @@ cursor: pointer;
 }
 
 .bar1, .bar2, .bar3 {
-    width: 35px;
-    height: 5px;
+    width: 2.1875em;
+    height: 0.3125em;
     background-color: #FFFFFF;
-    margin: 6px 0;
+    margin: 0.375em 0;
     transition: 0.4s;
 }
 
 .change .bar1 {
-    -webkit-transform: rotate(-45deg) translate(-9px, 6px);
-    transform: rotate(-45deg) translate(-9px, 6px);
+    -webkit-transform: rotate(-45deg) translate(-0.5625em, 0.375em);
+    transform: rotate(-45deg) translate(-0.5625em, 0.375em);
 }
 
 .change .bar2 {opacity: 0;}
 
 .change .bar3 {
-    -webkit-transform: rotate(45deg) translate(-8px, -8px);
-    transform: rotate(45deg) translate(-8px, -8px);
+    -webkit-transform: rotate(45deg) translate(-0.5em, -0.5em);
+    transform: rotate(45deg) translate(-0.5em, -0.5em);
 }
