--- a/server/public/css/style.css
+++ b/server/public/css/style.css
@@ -32,11 +32,11 @@ html body {
 }
 
 .nascosto {
-  height: 1px;
+  height: 0.0625em;
   overflow: hidden;
   position: absolute;
   top: auto;
-  width: 1px;
+  width: 0.0625em;
 }
 
 .transactions {
@@ -292,14 +292,14 @@ footer {
   background-color: #0c162c;
   padding: 0em;
   color: white;
-  font-size: 14px;
+  font-size: 10.5pt;
 }
 
 footer .grid-container{
   display: grid;
   grid-auto-columns: 1fr;
   grid-auto-flow: column;
-  padding: 10px;
+  padding: 0.625em;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
@@ -312,12 +312,12 @@ footer .grid-item{
 
 footer .items{
   font-weight: normal;
-  padding: 5px;
+  padding: 0.3125em;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 footer .items li{
-  padding: 5px;
+  padding: 0.3125em;
 }
 
 ul {
