Aggiunti meta tag

--- a/server/views/buyer.ejs
+++ b/server/views/buyer.ejs
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="keywords" content="Outgoing, Transactions, Status, ShopChain">
+  <meta name="description" content="View your outgoing transactions and their status on the Shop Chain web application">
   <meta charset="utf-8">
   <title>Outgoing | Shop Chain</title>
 
