--- a/server/views/seller.ejs
+++ b/server/views/seller.ejs
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="keywords" content="Incoming, Transactions, Status, Shop Chain">
+  <meta name="description" content="View your incoming transactions and their status on the Shop Chain web application">
   <meta charset="utf-8">
   <title>Incoming | Shop Chain</title>
 
