--- a/server/views/confirm.ejs
+++ b/server/views/confirm.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="robots" content="noindex">
   <meta charset="utf-8">
   <title>Confirm | Shop Chain</title>
 
