--- a/server/views/help.ejs
+++ b/server/views/help.ejs
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="keywords" content="Documentation, Manual, Instructions, Guide, Help, Shop Chain">
+  <meta name="description" content="Here you can find the official documenation for the Shop Chain web application. Available both for developers and users">
   <meta charset="utf-8">
   <title>Help | Shop Chain</title>
   
