--- a/server/views/main.ejs
+++ b/server/views/main.ejs
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="keywords" content="Shop Chain, main page, login">
+  <meta name="description" content="Welcome to Shop Chain! Allowing you to pay safely using the latest Smart Contract technology">
   <meta charset="utf-8">
   <title>Shop Chain</title>
 
