--- a/server/views/help.ejs
+++ b/server/views/help.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta name="keywords" content="Documentation, Manual, Instructions, Guide, Help, Shop Chain">
-  <meta name="description" content="Here you can find the official documenation for the Shop Chain web application. Available both for developers and users">
+  <meta name="description" content="Here you can find the official documentation for the Shop Chain web application. Available both for buyers and sellers">
   <meta charset="utf-8">
   <title>Help | Shop Chain</title>
   
