--- a/server/views/confirm.ejs
+++ b/server/views/confirm.ejs
@@ -20,7 +20,7 @@
     <span class="status" id="status"><%-status%></span>
     
     <input id="idPag" type="hidden" value="<%=id%>">
-    <a id="unlockFundsButton" onclick="onClickUnlockFunds()" role="button" aria-label="confirm delivey">Confirm</a>
+    <a id="unlockFundsButton" onclick="onClickUnlockFunds()" role="button" aria-label="confirm delivery">Confirm</a>
 </div>
 
 <%- include('footer.ejs') %>
