--- a/server/views/footer.ejs
+++ b/server/views/footer.ejs
@@ -9,7 +9,7 @@
         <div class="grid-item">
             <p>Contact Us</p>
             <ul class="items">
-                <li><a href="https://www.synclab.it/" target="_blank">Synclab</a></li>
+                <li><a href="https://www.synclab.it/" target="_blank">SyncLab</a></li>
                 <li><a href="mailto:winningsoftwaresolution@gmail.com">winningsoftwaresolution@gmail.com</a></li>
             </ul>
         </div>
