--- a/server/views/header.ejs
+++ b/server/views/header.ejs
@@ -16,7 +16,7 @@
 <body>
   <header>
     <a href="/" class="logo">Shop&nbsp;Chain</a>
-    <div id="hamb" class="containerHamb" onclick="toggleMenu();">
+    <div id="hamb" class="containerHamb" onclick="toggleMenu();" aria-haspopup="true" role="button" aria-label="menu">
       <div class="bar1"></div>
       <div class="bar2"></div>
       <div class="bar3"></div>
