--- a/server/views/header.ejs
+++ b/server/views/header.ejs
@@ -16,7 +16,11 @@
 <body>
   <header>
     <a href="/" class="logo">Shop&nbsp;Chain</a>
-    <button id="hamb" onclick="toggleMenu()" aria-haspopup="true">Menù</button>
+    <div id="hamb" class="containerHamb" onclick="toggleMenu();" aria-haspopup="true" role="button" aria-label="menu">
+      <div class="bar1"></div>
+      <div class="bar2"></div>
+      <div class="bar3"></div>
+    </div>
     <div id="header-right">
       <a id="listSeller" href="seller">Incoming</a>
       <a id="listBuyer" href="buyer">Outgoing</a>
