Modifiche copy buttons

--- a/server/public/css/mini.css
+++ b/server/public/css/mini.css
@@ -24,3 +24,18 @@ header a {
     margin-top: 1em;
     float: none;
 }
+
+.addr{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.copyButton{
+  margin: auto;
+}
+
+#seller, #buyer{
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
