--- a/server/public/css/style.css
+++ b/server/public/css/style.css
@@ -113,7 +113,7 @@ html body {
 }
 
 .addr {
-  white-space: nowrap; 
+  white-space: nowrap;
   overflow: hidden;
   font-size: 0.8em;
   margin: 1.7em;
@@ -166,7 +166,7 @@ html body {
   margin-top: -1.7em;
   margin-bottom: -2.2em;
   height: 40%;
-  width: 40%;  
+  width: 40%;
 }
 
 #sending img {
@@ -238,16 +238,15 @@ html body {
 }
 
 .copyButton {
+  width:1.5em;
+  height: 1.5em;
+  float: right;
   background-image: url(../img/copy.png);
-  text-indent:100%;
-  white-space:nowrap;
-  overflow:hidden;
-  width:2em;
-  height: 2em;
-  background-size: 2em 2em;
-  padding:0.1em;
-  border:none;
   background-color: white;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size:1.5em;
+  border:none;
 }
 
 .extraspace {
@@ -271,7 +270,7 @@ header a {
   text-align: center;
   padding: 0.5em;
   text-decoration: none;
-  font-size: 1.2em; 
+  font-size: 1.2em;
   border-radius: 10px;
 }
 
