--- a/server/public/css/style.css
+++ b/server/public/css/style.css
@@ -113,7 +113,7 @@ html body {
 }
 
 .addr {
-  white-space: nowrap; 
+  white-space: nowrap;
   overflow: hidden;
   font-size: 0.8em;
   margin: 1.7em;
@@ -166,7 +166,7 @@ html body {
   margin-top: -1.7em;
   margin-bottom: -2.2em;
   height: 40%;
-  width: 40%;  
+  width: 40%;
 }
 
 #sending img {
@@ -245,7 +245,7 @@ header {
   flex-shrink: 0;
   overflow: hidden;
   background-color: #0c162c;
-  padding: 1em;
+  padding: 0.8em;
 }
 
 #hamb {
@@ -258,17 +258,24 @@ header a {
   text-align: center;
   padding: 0.5em;
   text-decoration: none;
-  font-size: 1.2em; 
+  font-size: 1.2em;
   border-radius: 10px;
 }
 
-header a.logo {
-  font-size: 1.5em;
-  font-weight: bold;
+header a #logo {
+  width: 100%;
+  height: 100%;
   margin-top: auto;
   margin-bottom: auto;
 }
 
+header a.logo{
+  width: 8em;
+  height: 2.1em;
+  padding: 0;
+  margin-top: auto;
+  margin-bottom: auto;
+}
 #header-right {
   float: right;
   margin-top: auto;
