Copy buttons in land e confirm

--- a/server/views/confirm.ejs
+++ b/server/views/confirm.ejs
@@ -11,15 +11,17 @@
     <strong class="price">Price <%-price%>$</strong>
     <div class="addr">
         From: <span id="buyer"><%-buyer%></span>
+        <button class="copyButton" onclick="copyAddress('buyer')" aria-label="copy buyer address"></button>
     </div>
-    
+
     <div class="addr">
         To: <span id="seller"><%-seller%></span>
+        <button class="copyButton" onclick="copyAddress('seller')" aria-label="copy seller address"></button>
     </div>
     <span class="date">Opened <%-created%></span>
     <%-confirmed%>
     <span class="status" id="status"><%-status%></span>
-    
+
     <input id="idPag" type="hidden" value="<%=id%>">
     <a id="unlockFundsButton" onclick="onClickUnlockFunds()" role="button" aria-label="confirm delivery">Confirm</a>
 </div>
