--- a/server/views/header.ejs
+++ b/server/views/header.ejs
@@ -16,7 +16,7 @@
 <body>
   <header>
     <a href="/" class="logo">
-      <img id="logo" src="../img/logo.png" alt="Logo Shop Chain"/>
+      <img id="logo" src="img/logo.png" alt="Shop Chain logo"/>
     </a>
     <div id="hamb" class="containerHamb" onclick="toggleMenu();" aria-haspopup="true" role="button" aria-label="menu">
       <div class="bar1"></div>
