--- a/server/public/css/style.css
+++ b/server/public/css/style.css
@@ -247,6 +247,7 @@ html body {
   background-position: center center;
   background-size:1.5em;
   border:none;
+  cursor: pointer;
 }
 
 .extraspace {
