--- a/server/public/css/style.css
+++ b/server/public/css/style.css
@@ -270,8 +270,8 @@ header a #logo {
 }
 
 header a.logo{
-  width: 8em;
-  height: 2.1em;
+  width: 7.6em;
+  height: 2em;
   padding: 0;
   margin-top: auto;
   margin-bottom: auto;
@@ -292,6 +292,7 @@ footer a {
 }
 
 footer {
+  margin-top: 2em;
   background-color: #0c162c;
   padding: 0em;
   color: white;
