Aggiunta Copy buttons (#153)
* aggiunta bottoni copia

* Modifiche copy buttons

* Aria copy buttons

* Copy buttons in land e confirm

* Corretto css e copy.png

Co-authored-by: Alberto <alby99nicoletti@gmail.com>

--- a/server/public/css/mini.css
+++ b/server/public/css/mini.css
@@ -24,6 +24,26 @@
     clear: both;
 }
 
+.addr{
+  display: flex;
+  text-align: center;
+  padding-left: 1.2em;
+}
+
+.copyButton{
+  float: right;
+  margin-left: 1em;
+  min-width: 1.5em;
+  min-width: 1.5em;
+}
+
+#seller, #buyer{
+  float: left;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  padding-left: 0.5em;
+}
+
 .containerHamb {
     display: inline-block;
     cursor: pointer;
