--- a/server/views/land.ejs
+++ b/server/views/land.ejs
@@ -9,7 +9,7 @@
 
 <div class="info">
     <strong class="price">Price <%-price%>$</strong>
-    <div class="addr extraspace">
+    <div class="addr">
       Seller: <span id="seller" ><%-seller%></span>
       <button class="copyButton" onclick="copyAddress('seller')" aria-label="copy seller address"></button>
     </div>
