--- a/server/public/css/style.css
+++ b/server/public/css/style.css
@@ -32,28 +32,45 @@ html body {
 }
 
 .nascosto {
-  height: 1px;
-  overflow: hidden;
-  position: absolute;
-  top: auto;
-  width: 1px;
+  font-size: 0.9;
+  display: inline;
+  margin: auto;
+}
+
+.specific{
+  width: 75%;
+  display: grid;
+  grid-template-columns: 31% 31% 31% 6%;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 2.3em;
+  padding-right: 2.3em;
+  padding-top: 4em;
+  padding-bottom: 0em;
+}
+
+.specific span{
+  text-align: center;
+  font-size: 1.3em;
+  font-weight: bold;
 }
 
 .transactions {
-  margin-top: 2em;
-  display: flex;
-  flex-wrap: wrap;
-  list-style-type: none;
-  align-items: center;
-  justify-content: center;
+  width: 75%;
+  max-height: 32em;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  list-style: none;
+	margin: auto;
+	padding: 2em;
+  padding-top: 0em;
 }
 
 .transactions li {
+  display: grid;
+  grid-template-columns: 31% 31% 31% 6%;
   text-align: center;
-  position: relative;
-  width: 15em;
-  height: 10em;
-  flex: 1;
+  width: 100%;
   color: black;
   background-color: white;
   border-radius: 10px;
@@ -63,22 +80,11 @@ html body {
   background-size: 2.9em;
 }
 
-.transactions li.stato0 {
-  background-image: url("../img/grey.png");
+.transactions #state{
+  max-width: 50%;
+  max-height: 50%;
+  margin: auto;
 }
-
-.transactions li.stato1 {
-  background-image: url("../img/yellow.png");
-}
-
-.transactions li.stato2 {
-  background-image: url("../img/green.png");
-}
-
-.transactions li.stato3 {
-  background-image: url("../img/red.png");
-}
-
 
 .transactions a {
   text-decoration: none;
@@ -104,6 +110,11 @@ html body {
   font-weight: bold;
 }
 
+.price_list {
+  display: inline;
+  margin: auto;
+}
+
 .price {
   font-size: 1.2em;
   margin: 1.7em;
@@ -121,6 +132,12 @@ html body {
   display: block;
   font-weight: bold;
   text-overflow: ellipsis;
+}
+
+.date_list {
+  display: inline;
+  font-size: 0.8em;
+  margin: auto;
 }
 
 .date {
