--- a/server/public/css/style.css
+++ b/server/public/css/style.css
@@ -37,7 +37,7 @@ html body {
   margin: auto;
 }
 
-.specific{
+.data_type {
   width: 75%;
   display: grid;
   grid-template-columns: 31% 31% 31% 6%;
@@ -49,7 +49,7 @@ html body {
   padding-bottom: 0em;
 }
 
-.specific span{
+.data_type span {
   text-align: center;
   font-size: 1.3em;
   font-weight: bold;
@@ -80,7 +80,7 @@ html body {
   background-size: 2.9em;
 }
 
-.transactions #state{
+.transactions #state {
   max-width: 50%;
   max-height: 50%;
   margin: auto;
@@ -329,7 +329,7 @@ footer {
   font-size: 0.72em;
 }
 
-footer .grid-container{
+footer .grid-container {
   display: grid;
   grid-auto-columns: 1fr;
   grid-auto-flow: column;
@@ -340,18 +340,18 @@ footer .grid-container{
   margin-top: 1em;
 }
 
-footer .grid-item{
+footer .grid-item {
   font-weight: 700;
 }
 
-footer .items{
+footer .items {
   font-weight: normal;
   padding: 0.3125em;
   font-family: Arial, Helvetica, sans-serif;
   text-decoration: underline;
 }
 
-footer .items li{
+footer .items li {
   padding: 0.3125em;
 }
 
